[gd_scene load_steps=9 format=3 uid="uid://d5qt1hh47inp"]

[ext_resource type="Script" path="res://scenes/UI/end_screen.gd" id="1_2l70r"]
[ext_resource type="PackedScene" uid="uid://celhb5lg0j6w8" path="res://scenes/UI/button_sound_effect.tscn" id="2_bvng2"]
[ext_resource type="AudioStream" uid="uid://dvvteome7ih6n" path="res://assets/audio/victory_jingle.wav" id="2_hdq06"]
[ext_resource type="AudioStream" uid="uid://o4x3nfdwb8aw" path="res://assets/audio/defeat_jingle2.wav" id="3_05xg5"]

[sub_resource type="Animation" id="Animation_owh7i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7ob4t"]
resource_name = "in"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pp1nw"]
resource_name = "out"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7lv74"]
_data = {
"RESET": SubResource("Animation_owh7i"),
"in": SubResource("Animation_7ob4t"),
"out": SubResource("Animation_pp1nw")
}

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_2l70r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7lv74")
}
autoplay = "in"

[node name="VictorySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_hdq06")
volume_db = -10.0
bus = &"Sound Effects"

[node name="DefeatSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_05xg5")
volume_db = -10.0
bus = &"Sound Effects"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.341176)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.129412, 0.129412, 0.137255, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Victory!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.129412, 0.129412, 0.137255, 1)
theme_override_constants/outline_size = 5
text = "You survived"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"

[node name="ButtonSoundEffect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/RestartButton" instance=ExtResource("2_bvng2")]

[node name="QuitToMenuButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit to Menu"

[node name="ButtonSoundEffect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/QuitToMenuButton" instance=ExtResource("2_bvng2")]

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit to Desktop"

[node name="ButtonSoundEffect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/QuitButton" instance=ExtResource("2_bvng2")]
